testsuite/tests/overloadedrecflds/should_compile/T13352_hard_B.hs
{-# LANGUAGE DuplicateRecordFields #-}
module T13352_hard_B where
  data T = C { foo :: Int }
