testsuite/tests/overloadedrecflds/should_fail/T16745D.hs
{-# LANGUAGE DuplicateRecordFields #-}
module T16745D where
data S = MkS { foo :: Char }
data T = MkT { foo :: Int }
